--- a/estilos/general.css
+++ b/estilos/general.css
@@ -18,7 +18,6 @@ body[data-theme="dark-theme"] {
 }
 
 body {
-  padding-top: 1rem;
   background: url(../images/background/bk.jpg);
   background-size: cover;
 
@@ -28,7 +27,7 @@ body {
   font-weight: 400;
   transition: background-color 0.9s, color 0.3s;
   text-align: center;
-  text-shadow: 1px 1px 5px var(--color-paleta1);
+  text-shadow: 1px 1px 5px var(--color-paleta6);
   display: flex;
   flex-flow: column wrap;
 }
@@ -41,23 +40,24 @@ main {
 }
 a {
   line-height: normal;
+  text-decoration: none;
+  transition: all 0.8s ease-in-out;
 }
 
 iframe {
   border: 2px solid var(--color-hover);
 
-  border-radius: 15px;
+  border-radius: 10px;
   border-color: var(--color-paleta2);
   box-shadow: inset 5px 5px 10px #61dafb99;
 
-  min-height: 95vh;
+  min-height: 96vh;
   margin-top: 3rem;
   width: 100%;
-  padding-top: 1rem;
 }
 
-span {
-  color: var(--color-paleta2);
+.span {
+  color: var(--color-paleta5);
   font-size: var(--medida-texto-extra-grande);
   font-weight: 600;
 }
@@ -76,13 +76,18 @@ h4 {
 }
 
 section {
-  margin-top: 2rem;
-  height: 100vh;
-  border-bottom: 1px solid #ccc;
   background-color: transparent;
 }
 
 footer {
   background-color: rgba(0, 0, 0, 0.8);
   text-align: center;
+}
+
+.doble__pantalla {
+  height: 160vh;
+}
+
+.triple__pantalla {
+  height: 270vh;
 }
