--- a/assets/apps/focus_riveradev/estilos/tarjetas.css
+++ b/assets/apps/focus_riveradev/estilos/tarjetas.css
@@ -1,5 +1,3 @@
-/** @format */
-
 .holograma {
   background: linear-gradient(
     135deg,
@@ -17,9 +15,9 @@
   transition: transform 0.4s ease, box-shadow 0.4s ease, background 0.4s ease,
     filter 0.4s ease;
   animation: holograma 4s linear infinite;
-  color: #fff;
+
   text-align: center;
-  padding: 20px;
+  padding: 1rem;
 }
 
 .holograma::before {
